<resources>
    <string name="app_name">Clean Queen</string>
    <string name="action_settings">Settings</string>
    <string name="register">register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="picture">picture</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Name</string>
    <string name="registreer_nu">registreer nu</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="password">Password:</string>
    <string name="fullname">Name:</string>
    <string name="Adres">Address:</string>
    <string name="phone">Tel:</string>
    <string name="naam">Name:</string>
</resources>
