<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="131dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints,labelFor"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="212dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints,labelFor"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="295dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints,labelFor"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="378dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints,labelFor"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="49dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints,labelFor"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/registreer_nu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="487dp"
        tools:ignore="MissingConstraints,labelFor"/>

    <EditText
        android:id="@+id/editText11"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/naam"
        tools:ignore="MissingConstraints,labelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="49dp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        tools:ignore="MissingConstraints,labelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email"
        tools:ignore="MissingConstraints,labelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="212dp" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone"
        tools:ignore="MissingConstraints,labelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="295dp" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Adres"
        tools:ignore="MissingConstraints,labelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="378dp" />
</android.support.constraint.ConstraintLayout>